--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         milk, nuts,
         nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
     </p>
-    <div class="smoothies__features ">
+    <div class="smoothies__features features">
         <div class="features__item">
             <img class="features__img" src="./../assets/images/smoothies/smoothies__img1.png" alt="Plant Based">
             <span class="features__item-title">Plant Based</span>
@@ -161,28 +161,28 @@
         <div class="about__box">
             <h2 class="about__title title title--white">What makes Smoothie an
                 <span class="title--green">awesome drink?</span></h2>
-            <ul class="desc__list">
-                <li class="desc__item">
-                    <span class="desc__item--font-black">Crunchy</span> Puffs Texture
+            <ul class="about__list">
+                <li class="about__item">
+                    <span class="about__item--font-black">Crunchy</span> Puffs Texture
                 </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">100 Calories</span> per drink
+                <li class="about__item">
+                    <span class="about__item--font-black">100 Calories</span> per drink
                 </li>
-                <li class="desc__item">4g Plant Protein</li>
-                <li class="desc__item">Good source of
-                    <span class="desc__item--font-black">Magnesium & Vitamin B6</span>
+                <li class="about__item">4g Plant Protein</li>
+                <li class="about__item">Good source of
+                    <span class="about__item--font-black">Magnesium & Vitamin B6</span>
                 </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">No Sugar</span> in our Savory Flavors
+                <li class="about__item">
+                    <span class="about__item--font-black">No Sugar</span> in our Savory Flavors
                 </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">Non-GMO, Vegan & Paleo</span>
+                <li class="about__item">
+                    <span class="about__item--font-black">Non-GMO, Vegan & Paleo</span>
                 </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">Gluten-Free & Grain-Free</span>
+                <li class="about__item">
+                    <span class="about__item--font-black">Gluten-Free & Grain-Free</span>
                 </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">Corn-Free & Soy-Free</span>
+                <li class="about__item">
+                    <span class="about__item--font-black">Corn-Free & Soy-Free</span>
                 </li>
             </ul>
             <button class="about__btn btn btn--border-orange">About Organic Smoothie
@@ -210,7 +210,7 @@
         </button>
     </div>
 
-    <div class="products__item product-item-lemon">
+    <div class="products__item products__item-lemon">
         <img class="products__img" src="./../assets/images/product/products-img3.png" alt="products-img3">
         <h4 class="products__name">Lemon Ginger Smoothie</h4>
         <span class="products__capacity">100 ml</span>
@@ -218,7 +218,7 @@
         </button>
     </div>
 
-    <div class="products__item product-item-garlic">
+    <div class="products__item products__item-garlic">
         <img class="products__img" src="./../assets/images/product/products-img4.png" alt="products-img4">
         <h4 class="products__name">Turmeric Garlic Smoothie</h4>
         <span class="products__capacity">100 ml</span>
@@ -303,11 +303,21 @@
         <img class="instagram_logo" src="./../assets/images/instagram/instagram-logo.png" alt="">ashasuperfoods
     </a>
     <div class="instagram__picture-item">
-        <img class="instagram__img" src="./../assets/images/instagram/instagram-img1.png" alt="img1">
-        <img class="instagram__img" src="./../assets/images/instagram/instagram-img2.png" alt="img2">
-        <img class="instagram__img" src="./../assets/images/instagram/instagram-img3.png" alt="img3">
-        <img class="instagram__img" src="./../assets/images/instagram/instagram-img4.png" alt="img4">
-        <img class="instagram__img" src="./../assets/images/instagram/instagram-img5.png" alt="img5">
+        <div class="instagram-img-wrapper">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img1.png" alt="img1">
+        </div>
+        <div class="instagram-img-wrapper">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img2.png" alt="img2">
+        </div>
+        <div class="instagram-img-wrapper">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img3.png" alt="img3">
+        </div>
+        <div class="instagram-img-wrapper">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img4.png" alt="img4">
+        </div>
+        <div class="instagram-img-wrapper">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img5.png" alt="img5">
+        </div>
     </div>
 </section>
 
