--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
     <title>Document</title>
 </head>
-
+<boby>
 <!--Header==============-->
 <header class="header">
     <div class="header__top">
