--- a/index.html
+++ b/index.html
@@ -245,7 +245,10 @@
         <button class="story__btn btn btn--green-bg">Who we are
         </button>
     </div>
-    <img class="story__img your-element" data-tilt data-tilt-startX="20" data-tilt-startY="-20" src="./../assets/images/story/story-Img.png" alt="">
+    <div class="story__img-box your-element" data-tilt data-tilt-startX="20" data-tilt-startY="-20">
+        <img class="story__img "  src="./../assets/images/story/story-Img.png" alt="">
+    </div>
+    
 
 </section>
 
